Bootstrap 4 installed ->navbar updated ->lots mor work to do..

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -18,12 +18,12 @@
 
 <p></p>
 
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        <h4 class="panel-title">Supervisie tools algemeen GA</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+<div class="card ">
+    <div class="card-header bg-primary">
+        <h4 class="card-title">Supervisie tools algemeen GA</h4>
+        <span class="pull-right clickable"><i class="fas fa-chevron-circle-up"></i></span>
     </div>
-    <div class="panel-body">
+    <div class="card-body">
         <p>
             <a href="~/Gadata/Table/PloegRapportWebgrid" class="btn btn-primary btn-sm">PloegRapport &raquo;</a>
             Bevat storingen groter dan 20 minuten of die meer dan 3 keer zijn voorgevallen
