--- a/EqUiWebUi/Areas/Alert/Views/Alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Index.cshtml
@@ -7,31 +7,30 @@
 <h2>Index Alerts</h2>
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h5 class="card-title">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
             Alerts
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1" style="color:aliceblue"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
 
     <div class="card-body">
-        <p><a href="~/Alert/Alert/Listalerts" class="btn btn-primary btn-sm">Listalerts &raquo;</a>Alert systeem algemeen</p>
+        <p>
+            <a href="~/Alert/Alert/Listalerts" class="btn btn-primary btn-sm">Listalerts &raquo;</a>Alert systeem algemeen
+        </p>
 
-    </div>
 
-    <hr />
+        <p>
+            <a href="~/Alert/Alert/AASPOTIndex" class="btn btn-primary btn-sm">AASPOTIndex &raquo;</a>Alert systeem aangepast voor AASPOT users
+        </p>
 
-    <div class="card-body">
-        <p><a href="~/Alert/Alert/AASPOTIndex" class="btn btn-primary btn-sm">AASPOTIndex &raquo;</a>Alert systeem aangepast voor AASPOT users</p>
-
-    </div>
-
-    <hr />
-    
-    <div class="card-body">
         <h3>Dit is nog in test en ook nog niet echt gekoppeld aan de alerts! </h3>
-        <p><a href="~/Alert/L_controlLimits/Index" class="btn btn-primary btn-sm">controlLimits &raquo;</a>view control limits</p>
-        <p><a href="~/Alert/L_variants/Index" class="btn btn-primary btn-sm">variants &raquo;</a>view variants</p>
+        <p>
+            <a href="~/Alert/L_controlLimits/Index" class="btn btn-primary btn-sm">controlLimits &raquo;</a>view control limits
+        </p>
+        <p>
+            <a href="~/Alert/L_variants/Index" class="btn btn-primary btn-sm">variants &raquo;</a>view variants
+        </p>
     </div>
 
 </div>
