--- a/EqUiWebUi/Areas/Alert/Views/Alert/_settings.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/_settings.cshtml
@@ -1,7 +1,9 @@
-﻿<div class="panel panel-warning">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">Alert settings</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+﻿<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+            Alert settings
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <p><a href="~/Alert/c_triggers/index" class="btn btn-danger btn-sm">c_trigger &raquo;</a>Manage alert triggers</p>
