--- a/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
@@ -29,8 +29,9 @@
                     + '&logtext=' + encodeURIComponent(data.logtext)
                 //launch modal
                 $('#MyModal').removeData('bs.modal');
-                $('#MyModal').html('<div class="modal-content">Loading....</div>');
-                $('#MyModal').modal({ remote: urlMoreInfo });
+                $('#MyModal').load(urlMoreInfo, function (result) {
+                    $('#MyModal').modal({ show: true });
+                });
             },
             reloadStarted: function () {
                 PloegRapportGridspinner.spin(document.getElementById('PloegRapportGridSpincontainer'));
