--- a/EqUiWebUi/Areas/HangfireArea/Views/Job/_settings.cshtml
+++ b/EqUiWebUi/Areas/HangfireArea/Views/Job/_settings.cshtml
@@ -1,7 +1,9 @@
-﻿<div class="panel panel-warning">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">Hangfire</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+﻿<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+            Hangfire
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <p><a href="~/Hangfire" class="btn btn-primary btn-sm">Hangfire &raquo;</a>Beheer van background jobs. </p>
