--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
@@ -2,14 +2,16 @@
     ViewBag.Title = "NGAC tiplife manager";
 }
 
-    <div class="jumbotron">
-        <h4>NGAC tiplife manager</h4>
-    </div>
-
-    <p></p>
+    <h2>NGAC tiplife manager</h2>
 
     <div class="card">
-        <h4>Greenfield</h4>
+        <div class="card-header bg-dark">
+            <h5 class="card-title text-white">
+                Greenfield
+                <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+            </h5>
+        </div>
+
         <div class="card-body">
             <p>
                 <a href="~/Tiplife/NgacElectrode/CurrentTipstatus" class="btn btn-primary btn-sm">Active tiplife &raquo;</a>
@@ -45,6 +47,6 @@
                 <a href="~/Tiplife/NgacElectrode/TipDressCycleTimeREMO" class="btn btn-primary btn-sm">DressCt &raquo;</a>
                 (For Remo)
             </p>
-
         </div>
+
     </div>
