--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -8,10 +8,10 @@
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h5 class="card-title">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
             Supervisie tools algemeen GA
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1" style="color:aliceblue"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
@@ -42,10 +42,10 @@
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h5 class="card-title">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
             Greenfield Only
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1" style="color:aliceblue"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
@@ -77,10 +77,10 @@
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h5 class="card-title">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
             Tableau
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1" style="color:aliceblue"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
@@ -94,10 +94,10 @@
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h5 class="card-title">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
             Qurt
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1" style="color:aliceblue"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
@@ -115,10 +115,10 @@
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h5 class="card-title">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
             Maximo
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1" style="color:aliceblue"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
@@ -132,10 +132,10 @@
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-warning">
-        <h5 class="card-title">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
             Beta
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1" style="color:aliceblue"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
