--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -2,9 +2,7 @@
     ViewBag.Title = "Settings";
 }
 
-<div class="jumbotron">
-    <h1>This is an Admin area!</h1>
-</div>
+<h1>This is an Admin area!</h1>
 
 <p></p>
 
@@ -24,10 +22,12 @@
 
 <p></p>
 
-<div class="panel panel-danger">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">TOOLS</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+<div class="card">
+    <div class="card-header bg-warning">
+        <h5 class="card-title text-white">
+            Tools
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <p><a href="http://gensvw1051:5601/app/kibana#/discover?_g=()" class="btn btn-danger btn-sm">Kibana (VIDS) &raquo;</a>Elastic search tool to search the VIDS database</p>
