--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -23,8 +23,11 @@
 <div>
     <h4>Desktop computers (max full HD)</h4>
     <div class="card">
-        <div class="card-header bg-primary">
-            <h4 class="card-title">Manuele storings registratie (Maximo STW040)</h4>
+        <div class="card-header bg-dark">
+            <h5 class="card-title text-white">
+                Manuele storings registratie (Maximo STW040)
+                <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+            </h5>
         </div>
         <div class="card-body">
             <p>
@@ -44,10 +47,15 @@
 
         </div>
     </div>
-    <p></p>
+    
+    <hr />
+
     <div class="card">
-        <div class="card-header bg-primary">
-            <h4 class="card-title">Automatische storings registratie (VCSC VASC)</h4>
+        <div class="card-header bg-dark">
+            <h5 class="card-title text-white">
+                Automatische storings registratie (VCSC VASC)
+                <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+            </h5>
         </div>
         <div class="card-body">
             <p>
@@ -86,8 +94,11 @@
     <hr />
 
     <div class="card">
-        <div class="card-header bg-primary">
-            <h4 class="card-title">Asset management</h4>
+        <div class="card-header bg-dark">
+            <h5 class="card-title text-white">
+                Asset managemen
+                <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+            </h5>
         </div>
         <div class="card-body">
             <p>
@@ -111,8 +122,11 @@
 <hr />
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">Tipdress NGAC</h4>
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Tipdress NGA
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
 
@@ -145,8 +159,11 @@
 </div>
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">4K Digiborden (max ultra HD)</h4>
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            4K Digiborden (max ultra HD)
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
 
