--- a/EqUiWebUi/Areas/Gadata/Views/Table/_loginfo.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_loginfo.cshtml
@@ -1,11 +1,11 @@
 ﻿@model EqUiWebUi.Models.LogInfo
 
-<div class="card-header bg-primary">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">
+<div class="card">
+    <div class="card-header bg-light">
+        <h6 class="card-title">
             Details for logcode: <strong>@Model.errornum</strong> logtext: <strong>@Model.logtext.Trim()</strong>
-        </h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+            <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h6>
     </div>
     <div class="card-body">
         @Html.Raw(Model.logDetails)
