--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woDetails.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "_woDetails";
 }
 
-<div class="panel panel-default @((!string.IsNullOrWhiteSpace(ViewBag.DESCRIPTION) || !string.IsNullOrWhiteSpace(ViewBag.LongDescription)) ? "shown":"hidden")">
+<div class="card @((!string.IsNullOrWhiteSpace(ViewBag.DESCRIPTION) || !string.IsNullOrWhiteSpace(ViewBag.LongDescription)) ? "shown":"hidden")">
     <div class="card-header bg-primary">
         <h6>
             Description:
@@ -11,12 +11,12 @@
         </h6>
     </div>
 
-    <div class="panel-body @(!string.IsNullOrWhiteSpace(ViewBag.LongDescription) ? "shown":"hidden")">
+    <div class="card @(!string.IsNullOrWhiteSpace(ViewBag.LongDescription) ? "shown":"hidden")">
         @Html.Raw(ViewBag.LongDescription)
     </div>
 </div>
 
-<div class="panel panel-default  @((!string.IsNullOrWhiteSpace(ViewBag.REMARKDESC) || !string.IsNullOrWhiteSpace(ViewBag.FailureRemark)) ? "shown":"hidden")">
+<div class="card @((!string.IsNullOrWhiteSpace(ViewBag.REMARKDESC) || !string.IsNullOrWhiteSpace(ViewBag.FailureRemark)) ? "shown":"hidden")">
     <div class="card-header bg-primary">
         <h6>
             FailureRemark:
@@ -30,7 +30,7 @@
 </div>
 
 
-<div class="panel panel-default shown">
+<div class="card shown">
     <div class="card-header bg-primary">
         <h6>
             ReportedBy:
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<div class="panel panel-default @(Model.Data.Count() != 0 ? "shown":"hidden")">
+<div class="card @(Model.Data.Count() != 0 ? "shown":"hidden")">
     <div class="card-header bg-primary">
         <h6>Labor</h6>
     </div>
