--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/_settings.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/_settings.cshtml
@@ -1,7 +1,9 @@
-﻿<div class="panel panel-warning">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">Screen management</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+﻿<div class="card">
+    <div class="card-header bg-warning">
+        <h5 class="card-title text-white">
+            Screen management
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <p><a href="~/user_management/UserScreens/Index" class="btn btn-primary btn-sm">Screens &raquo;</a>Beheer van schermen. (sommige gebruikers zoals de digiborden hebben voorgedefineerde schermen)</p>
