--- a/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
@@ -1,29 +1,32 @@
 ﻿
-<div class="panel panel-warning">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">User management</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+            User management
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <p><a href="~/user_management/users/Index" class="btn btn-primary btn-sm">Users &raquo;</a>Beheer van gebruikers</p>
         <p><a href="~/user_management/usersPermisions/Index" class="btn btn-primary btn-sm">UsersPermisions &raquo;</a>Beheer van rechten</p>
     </div>
-    <div class="panel-footer">
+    <div class="card-footer">
         <h6>Active sessions: @ViewBag.ActiveSessions</h6>
         <p><a href="~/user_management/users/ListSessions" class="btn btn-primary btn-xs">List &raquo;</a></p>
     </div>
 </div>
 
-<div class="panel panel-warning">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">Site filtering</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+<p></p>
+
+<div class="card">
+    <div class="card-header bg-warning">
+        <h5 class="card-title text-white">
+            Asset filtering
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <p><a href="~/user_management/AreaFilters/Index" class="btn btn-primary btn-sm">LocationFilters &raquo;</a>Beheer van location filters</p>
-    </div>
-
-    <div class="card-body">
         <p><a href="~/user_management/c_ownership/Index" class="btn btn-primary btn-sm">Ownership &raquo;</a>Beheer van ownership filters</p>
     </div>
 </div>
