--- a/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
+++ b/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
@@ -1,12 +1,12 @@
 ﻿@model EqUiWebUi.Models.LogInfo
-<div class="card-header bg-primary">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">
+<div class="card">
+    <div class="card-header bg-light">
+        <h6 class="card-title">
             Trend for location: <strong>@Model.location.Trim()</strong> logcode: <strong>@Model.errornum</strong> logtext: <strong>@Model.logtext.Trim()</strong>
-            <a class="glyphicon glyphicon-cog" href="#" data-toggle="popover" data-placement="bottom" id="ErrorTrentCharOptionsPopover"></a>
-            <a class="glyphicon glyphicon-calendar" id="ErrorTrentCharDatepicker" href="#"></a>
-        </h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+            <a class="fas fa-wrench text-black-50" href="#" data-toggle="popover" data-placement="bottom" id="ErrorTrentCharOptionsPopover"></a>
+            <a class="far fa-calendar-alt text-black-50" id="ErrorTrentCharDatepicker" href="#"></a>
+            <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h6>
     </div>
 
     <div class="card-body" id="graphSpinner" style="position:relative">
@@ -17,14 +17,14 @@
 </div>
 
 @*popover content*@
-<div class="hidden" id="ErrorTrentCharOptionsPopoverContent">
+<div class="d-none" id="ErrorTrentCharOptionsPopoverContent">
     <div class="panel panel-body">
-        <div class="row" style="color:#000000">
-            <div class=" col-2">
-                Groupmode
+        <div class="row">
+            <div class=" col-3">
+                Grouping
             </div>
 
-            <div class="col-10">
+            <div class="col-9">
                 <div class="btn-group" id="btnGrouping" role="group" data-toggle="tooltip" data-placement="bottom" title="Set how the graph groups the data" >
                     <button type="button" class="btn  btn-sm btn-secondary active" id="btnGroupingAuto">auto</button>
                     <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingHour">hour</button>
