--- a/EqUiWebUi/Views/Home/About.cshtml
+++ b/EqUiWebUi/Views/Home/About.cshtml
@@ -1,13 +1,15 @@
 ﻿
     <div class="jumbotron">
         <h2>We work best with Chrome!</h2>
+        Use this link to instal chrome
         <p><a href="https://www.google.com/chrome/browser/desktop/index.html" class="btn btn-primary btn-sm">Chromeinstal &raquo;</a></p>
 
+        <hr />
 
-        <h2>For optimal use you should install these chrome extensions.</h2>
+        <h3>For optimal use you should install these chrome extensions.</h3>
         <p></p>
         <div>
-            <h3>ClickOnce for Google Chrome</h3>
+            <h5>ClickOnce for Google Chrome</h5>
             <p>
                 <a href="https://chrome.google.com/webstore/detail/clickonce-for-google-chro/kekahkplibinaibelipdcikofmedafmb" class="btn btn-primary btn-sm">ClickOnce for Google Chrome &raquo;</a>
                 Needed to launch the VSTO click once tools in the chrome browser
